--- a/business.html
+++ b/business.html
@@ -75,8 +75,8 @@
                                         <li class="menu-item-has-children">
                                             <a href="#">Services</a>
                                                 <ul class="sub-menu">
-                                                   <li><a href='qualitative.html'>Qualitative</a></li>
-                                                   <li><a href='quantitative.html'>Quantitative</a></li>
+                                                   <li><a href='qualitative.html'>Qualitative Research</a></li>
+                                                   <li><a href='quantitative.html'>Quantitative Research</a></li>
                                                    <li><a href='telephone.html'>Telephonic Survey</a></li>
                                                    <li><a href='business.html'>Business Research</a></li>
                                                    <li><a href='#'>Other Services</a></li>
@@ -234,7 +234,7 @@
     <br />
     <main class="fix">
         <!-- breadcrumb-area -->
-        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/breadcrumb_bg.jpg">
+        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/request_bg.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
