--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                                         <li class="menu-item-has-children">
                                          <a href="#">Services</a>
                                              <ul class="sub-menu">
-                                                <li><a href='qualitative.html'>Qualitative</a></li>
-                                                <li><a href='#'>Quantitative</a></li>
-                                                <li><a href='#'>Telephonic Survey</a></li>
-                                                <li><a href='#'>Business Research</a></li>
+                                                <li><a href='qualitative.html'>Qualitative Research</a></li>
+                                                <li><a href='quantitative.html'>Quantitative Research</a></li>
+                                                <li><a href='telephone.html'>Telephonic Survey</a></li>
+                                                <li><a href='business.html'>Business Research</a></li>
                                                 <li><a href='#'>Other Services</a></li>
                                             </ul>
                                         </li>
@@ -238,7 +238,7 @@
                         <div class="banner-content">
                             <span class="sub-title" data-aos="fade-up" data-aos-delay="0">ICONIC INSIGHTS
                             </span>
-                            <h2 class="title" data-aos="fade-up" data-aos-delay="200"> We are a Partner to our Clients.
+                            <h2 class="title" data-aos="fade-up" data-aos-delay="200"> Innovative Solutions for your Business Growth
                             </h2>
                             <p data-aos="fade-up" data-aos-delay="400">We are a trusted Market Research Company & dedicated Partner to our Clients, providing comprehensive solutions for informed decision-making.
                             </p>
