--- a/about.html
+++ b/about.html
@@ -89,8 +89,8 @@
                                         <li class="menu-item-has-children">
                                             <a href="#">Services</a>
                                                 <ul class="sub-menu">
-                                                   <li><a href='qualitative.html'>Qualitative</a></li>
-                                                   <li><a href='quantitative.html'>Quantitative</a></li>
+                                                   <li><a href='qualitative.html'>Qualitative Research</a></li>
+                                                   <li><a href='quantitative.html'>Quantitative Research</a></li>
                                                    <li><a href='telephone.html'>Telephonic Survey</a></li>
                                                    <li><a href='business.html'>Business Research</a></li>
                                                    <li><a href='#'>Other Services</a></li>
@@ -304,6 +304,10 @@
             padding: 15px 5px;
         }
 
+        .head{
+            color: rgb(0, 50, 63);
+        }
+
         @media (max-width: 767.98px) {
             .Company-left ul {
                 padding-left: 0;
@@ -334,6 +338,7 @@
                 padding: 10px 0;
                 margin: 20px 0 15px;
             }
+              
         }
     </style>
     <br />
@@ -344,16 +349,16 @@
     <!-- main-area -->
     <main class="fix">
         <!-- breadcrumb-area -->
-        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/breadcrumb_bg.jpg">
+        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/aboutbanner.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="breadcrumb__content">
-                            <h2 class="title">About ICONIC INSIGHTS</h2>
-                            <p>With expertise in market research, we can cultivate insights, encourage talent, share information, and promote innovation across industries.</p>
-                            <nav aria-label="breadcrumb">
+                            <h2 class="title head">About ICONIC INSIGHTS</h2>
+                            <p class="head">With expertise in market research, we can cultivate insights, encourage talent, share information, and promote innovation across industries.</p>
+                            <nav aria-label="breadcrumb bottom">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href='index.htm'>Home</a></li>
+                                    <li class="breadcrumb-item"><a href='index.html'>Home</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">About ICONIC INSIGHTS</li>
                                 </ol>
                             </nav>
@@ -387,7 +392,7 @@
                     <div class="col-lg-6">
                         <div class="about__content-four">
                             <div class="section-title mb-30">
-                                <h2 class="title">About Iconic Insights</h2>
+                                <h2 class="title">Iconic Insights</h2>
                             </div>
 
                             <p>As a market research panel company, Iconic Insights believes that research is not just about data - it's about people. That's why we've built a community of engaged panelists who are passionate about sharing their opinions and experiences with businesses and researchers like you. When you work with us, you'll not only get high-quality data but also a personal touch that sets us apart from the rest. Let's work together to unlock the potential of insights and drive your business forward.
