--- a/automotive.html
+++ b/automotive.html
@@ -73,10 +73,10 @@
                                         </li>
                                         <li><a href="about.html">About Us</a>
                                         <li class="menu-item-has-children">
-                                            <a href="services.html">Services</a>
+                                            <a href="#">Services</a>
                                                 <ul class="sub-menu">
-                                                   <li><a href='qualitative.html'>Qualitative</a></li>
-                                                   <li><a href='quantitative.html'>Quantitative</a></li>
+                                                   <li><a href='qualitative.html'>Qualitative Research</a></li>
+                                                   <li><a href='quantitative.html'>Quantitative Research</a></li>
                                                    <li><a href='telephone.html'>Telephonic Survey</a></li>
                                                    <li><a href='business.html'>Business Research</a></li>
                                                    <li><a href='#'>Other Services</a></li>
@@ -339,17 +339,17 @@
     <!-- main-area -->
     <main class="fix">
         <!-- breadcrumb-area -->
-        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/breadcrumb_bg.jpg">
+        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/industries.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="breadcrumb__content">
-                            <h2 class="title">Industries</h2>
-                            <p>We understand that each research project is unique, and that's why we're committed to tailoring our solutions to your specific needs. Whether you're looking to understand the latest trends in the technology industry or evaluate the growth potential of the healthcare sector, We have the industry-specific insights you need to make informed decisions.</p>
+                            <h2 class="title head">Industries</h2>
+                            <p class="head">We understand that each research project is unique, and that's why we're committed to tailoring our solutions to your specific needs. Whether you're looking to understand the latest trends in the technology industry or evaluate the growth potential of the healthcare sector, We have the industry-specific insights you need to make informed decisions.</p>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href='index.htm'>Home</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Industries</li>
+                                    <li class="breadcrumb-item active head" aria-current="page">Industries</li>
                                 </ol>
                             </nav>
                         </div>
@@ -387,7 +387,8 @@
                                         <i class="flaticon-profit"></i>
                                     </div>
                                     <h4 class="title"><a href='#'>Automotive</a></h4>
-                                    <p>Emerging technology holds the promise of redefining mobility solutions, but companies are challenged with planning for an unclear future. With industry expertise and daily consumer interactions, we provide automotive insights and guidance for a clearer view of the possibilities.
+                                    <p>Market research is an important tool for automotive OEMs as it helps them determine trends and where their focus should be. Some of the benefits of automotive market research includes understanding customer experience, expectations, requirements etc.
+                                        Strategies for new product development. Insights for marketing and brand management
                                     </p>
                                     <!-- <a class='btn' href='#'>Read More</a> -->
                                 </div>
