--- a/qualitative.html
+++ b/qualitative.html
@@ -75,8 +75,8 @@
                                         <li class="menu-item-has-children">
                                             <a href="#">Services</a>
                                                 <ul class="sub-menu">
-                                                   <li><a href='qualitative.html'>Qualitative</a></li>
-                                                   <li><a href='quantitative.html'>Quantitative</a></li>
+                                                   <li><a href='qualitative.html'>Qualitative Research</a></li>
+                                                   <li><a href='quantitative.html'>Quantitative Research</a></li>
                                                    <li><a href='telephone.html'>Telephonic Survey</a></li>
                                                    <li><a href='business.html'>Business Research</a></li>
                                                    <li><a href='#'>Other Services</a></li>
@@ -234,12 +234,12 @@
     <br />
     <main class="fix">
         <!-- breadcrumb-area -->
-        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/breadcrumb_bg.jpg">
+        <section class="breadcrumb__area breadcrumb__bg" data-background="assets/front/img/bg/business.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="breadcrumb__content">
-                            <h2 class="title">Qualitative</h2>
+                            <h2 class="title headd">Qualitative</h2>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href='index.html'>Home</a></li>
@@ -353,7 +353,7 @@
                             <div class="services-item shine-animate-item">
                                 <div class="services-thumb">
                                     <a class='shine-animate' href='#'><img
-                                            src="assets/front/img/services/group-01.jpg" alt=""></a>
+                                            src="assets/front/img/services/clt-conf-01.jpg" alt=""></a>
                                 </div>
                                 <div class="services-content">
                                     <div class="icon">                                 <i class="fa fa-users" aria-hidden="true"></i>
