--- a/quantitative.html
+++ b/quantitative.html
@@ -343,7 +343,7 @@
                     <div class="col-xl-10 col-lg-8">
                         <div class="section-title text-center mb-40">
                             <!-- <span class="sub-title">WHAT WE OFFER</span> -->
-                            <h2 class="title">We offer a range of services in Qualitative Research</h2>
+                            <h2 class="title">We offer a range of services in  Quantitative Research</h2>
                         </div>
                     </div>
                 </div>
