its ok final hai yeh

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     <!-- Scroll-top-end-->
     <!-- header-area -->
     <header class="transparent-header">
-        <div class="tg-header__top">
+        <!-- <div class="tg-header__top">
             <div class="container custom-container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div id="sticky-header" class="tg-header__area">
             <div class="container custom-container">
                 <div class="row">
@@ -647,7 +647,7 @@
 
         <br />
         <br />
-        <section class="">
+        <!-- <section class="">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
@@ -674,7 +674,7 @@
                 ">Iconic Insights also adheres to the same level of privacy policy compliance. </p>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <br/>
         <br/>
