--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Scroll-top-end-->
     <!-- header-area -->
     <header class="transparent-header">
-        <div class="tg-header__top">
+        <!-- <div class="tg-header__top">
             <div class="container custom-container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div id="sticky-header" class="tg-header__area">
             <div class="container custom-container">
                 <div class="row">
@@ -849,7 +849,7 @@
         </section>  -->
         <!-- blog-post-area-end -->
         <!-- call-back-area -->
-        <section class="call-back-area">
+        <!-- <section class="call-back-area">
             <div class="container">
                 <div class="row" style="align-items: center;">
                     <div class="col-lg-5">
@@ -870,7 +870,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- call-back-area-end -->
     </main>
     <!-- main-area-end -->
