--- a/telephone.html
+++ b/telephone.html
@@ -41,7 +41,7 @@
     <!-- Scroll-top-end-->
     <!-- header-area -->
     <header class="transparent-header">
-        <div class="tg-header__top">
+        <!-- <div class="tg-header__top">
             <div class="container custom-container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div id="sticky-header" class="tg-header__area">
             <div class="container custom-container">
                 <div class="row">
@@ -283,7 +283,7 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-title mb-35 tg-heading-subheading animation-style3">
-                                <span class="sub-title" style="color: rgb(92, 90, 90)">Simply Know About</span>
+                                <!-- <span class="sub-title" style="color: rgb(92, 90, 90)">Simply Know About</span> -->
                                 <h2 class="title tg-element-title">Telephone Surveys</h2>
                             </div>
                             <div class="about-list">
