--- a/automotive.html
+++ b/automotive.html
@@ -41,7 +41,7 @@
     <!-- Scroll-top-end-->
     <!-- header-area -->
     <header class="transparent-header">
-        <div class="tg-header__top">
+        <!-- <div class="tg-header__top">
             <div class="container custom-container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div id="sticky-header" class="tg-header__area">
             <div class="container custom-container">
                 <div class="row">
