--- a/about.html
+++ b/about.html
@@ -148,12 +148,12 @@
                                 <div class="nav-logo">
                                     <a href='#'><img src="assets/logo/logo.png" alt="Logo"></a>
                                 </div>
-                                <div class="tgmobile__search">
+                                <!-- <div class="tgmobile__search">
                                     <form action="#">
                                         <input type="text" placeholder="Search here...">
                                         <button><i class="fas fa-search"></i></button>
                                     </form>
-                                </div>
+                                </div> -->
                                 <div class="tgmobile__menu-outer">
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                                 </div>
