--- a/automotive.html
+++ b/automotive.html
@@ -143,22 +143,22 @@
                                 <div class="nav-logo">
                                     <a href='#'><img src="assets/logo/logo.png" alt="Logo"></a>
                                 </div>
-                                <div class="tgmobile__search">
+                                <!-- <div class="tgmobile__search">
                                     <form action="#">
                                         <input type="text" placeholder="Search here...">
                                         <button><i class="fas fa-search"></i></button>
                                     </form>
-                                </div>
+                                </div> -->
                                 <div class="tgmobile__menu-outer">
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                                 </div>
                                 <div class="tgmobile__menu-bottom">
-                                    <div class="contact-info">
+                                    <!-- <div class="contact-info">
                                         <ul class="list-wrap">
                                             <li><a href="mailto:dashwant.singh@gmail.com">dashwant.singh@gmail.com</a></li>
                                             <li><a href="tel:9560452708">+91-9560-452708</a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                     <div class="social-links">
                                         <ul class="list-wrap">
                                             <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
