--- a/contact.html
+++ b/contact.html
@@ -196,22 +196,22 @@ button:hover {
                             <div class="nav-logo">
                                 <a href='#'><img src="assets/logo/logo.png" alt="Logo"></a>
                             </div>
-                            <div class="tgmobile__search">
+                            <!-- <div class="tgmobile__search">
                                 <form action="#">
                                     <input type="text" placeholder="Search here...">
                                     <button><i class="fas fa-search"></i></button>
                                 </form>
-                            </div>
+                            </div> -->
                             <div class="tgmobile__menu-outer">
                                 <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                             </div>
                             <div class="tgmobile__menu-bottom">
-                                <div class="contact-info">
+                                <!-- <div class="contact-info">
                                     <ul class="list-wrap">
                                         <li><a href="mailto:dashwant.singh@gmail.com">dashwant.singh@gmail.com</a></li>
                                         <li><a href="tel:9560452708">+91-9560-452708</a></li>
                                     </ul>
-                                </div>
+                                </div> -->
                                 <div class="social-links">
                                     <ul class="list-wrap">
                                         <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
@@ -311,60 +311,59 @@ button:hover {
         });
     </script>
     
-  </body>
+    <footer>
+        <div class="footer-area">
+            <div class="footer-bottom">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-2 order-0 order-lg-2">
+                            <div style="text-align: right;">
+                                <a target="_blank" href="https://www.linkedin.com/company/intage-india/">
+                          <svg style="width: 32px;" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#0A66C2" d="M12.225 12.225h-1.778V9.44c0-.664-.012-1.519-.925-1.519-.926 0-1.068.724-1.068 1.47v2.834H6.676V6.498h1.707v.783h.024c.348-.594.996-.95 1.684-.925 1.802 0 2.135 1.185 2.135 2.728l-.001 3.14zM4.67 5.715a1.037 1.037 0 01-1.032-1.031c0-.566.466-1.032 1.032-1.032.566 0 1.031.466 1.032 1.032 0 .566-.466 1.032-1.032 1.032zm.889 6.51h-1.78V6.498h1.78v5.727zM13.11 2H2.885A.88.88 0 002 2.866v10.268a.88.88 0 00.885.866h10.226a.882.882 0 00.889-.866V2.865a.88.88 0 00-.889-.864z"></path></g></svg>
+                          </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-10">
+                            <div class="copyright-text">
+                                <p>Copyright © <a href='index.htm'>Iconic Insights Pvt. Ltd.</a> | All Right Reserved</p>
+                                <a href='contact.html'>Support Terms & Conditions Privacy Policy.</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-shape">
+                <img src="assets/front/img/images/footer_shape01.png" alt="" data-aos="fade-right" data-aos-delay="400">
+                <img src="assets/front/img/images/footer_shape02.png" alt="" data-aos="fade-left" data-aos-delay="400">
+                <img src="assets/front/img/images/footer_shape03.png" alt="" data-parallax='{"x" : 100 , "y" : -100 }'>
+            </div>
+        </div>
+    </footer>
+    <!-- footer-area-end -->
+    <!-- JS here -->
+    <script src="assets/front/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="assets/front/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/front/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/front/js/jquery.odometer.min.js"></script>
+    <script src="assets/front/js/jquery.appear.js"></script>
+    <script src="assets/front/js/gsap.js"></script>
+    <script src="assets/front/js/ScrollTrigger.js"></script>
+    <script src="assets/front/js/SplitText.js"></script>
+    <script src="assets/front/js/gsap-animation.js"></script>
+    <script src="assets/front/js/jquery.parallaxScroll.min.js"></script>
+    <script src="assets/front/js/swiper-bundle.js"></script>
+    <script src="assets/front/js/ajax-form.js"></script>
+    <script src="assets/front/js/wow.min.js"></script>
+    <script src="assets/front/js/aos.js"></script>
+    <script src="assets/front/js/main.js"></script>
+    <script>
+        const text = document.querySelector('.circle');
+        text.innerHTML = text.textContent.replace(/\S/g, "<span>$&</span>");
+        const element = document.querySelectorAll('.circle span');
+        for (let i = 0; i < element.length; i++) {
+            element[i].style.transform = "rotate(" + i * 17 + "deg)"
+        }
+    </script>
+</body>
 
 </html>
-
-
-<script>
-    document.getElementById('contactForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        $("#preloader").show();
-        var formMessages = $('.ajax-response');
-        $(formMessages).removeClass('error');
-        $(formMessages).removeClass('success');
-        // Set the message text.
-        $(formMessages).text('');
-
-        // Check reCAPTCHA
-        var recaptchaResponse = grecaptcha.getResponse();
-        if (!recaptchaResponse) {
-            $("#preloader").hide();
-            $(formMessages).removeClass('success');
-            $(formMessages).addClass('error');
-            $(formMessages).text('Please complete the reCAPTCHA.');
-            // $("#form-message").html(`<div class="alert alert-danger" role="alert">Please complete the reCAPTCHA.</div>`);
-            return;
-        }
-
-        // Create FormData object
-        var formData = new FormData(this);
-
-        // Send data using AJAX
-        var xhr = new XMLHttpRequest();
-        xhr.open('POST', '#', true);
-        xhr.onload = function() {
-            $("#preloader").hide();
-            grecaptcha.reset();
-            let responseText = JSON.parse(xhr.responseText);
-            if (xhr.status === 200) {
-                if (responseText.status == "success") {
-                    document.getElementById('contactForm').reset(); // Reset the form fields
-                    $(formMessages).removeClass('error');
-                    $(formMessages).addClass('success');
-                    $(formMessages).text(responseText.msg);
-                } else {
-                    $(formMessages).removeClass('success');
-                    $(formMessages).addClass('error');
-                    $(formMessages).text(responseText.msg);
-                }
-            } else {
-                $(formMessages).removeClass('success');
-                $(formMessages).addClass('error');
-                $(formMessages).text('An error occurred while submitting the form.');
-            }
-
-        };
-        xhr.send(formData);
-    });
-</script>
