--- a/marketing-process.html
+++ b/marketing-process.html
@@ -44,17 +44,17 @@
         <div class="tg-header__top">
             <div class="container custom-container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <!-- <div class="col-lg-6">
                         <ul class="tg-header__top-info left-side list-wrap">
                             <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+919560452708">+91-9560-452708</a></li>
                             <li><i class="fa fa-map-marker" aria-hidden="true"></i></i>Patna Bihar India</li>
                         </ul>
-                    </div>
-                    <div class="col-lg-6">
+                    </div> -->
+                    <!-- <div class="col-lg-6">
                         <ul class="tg-header__top-right list-wrap">
                             <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a>dashwant.singh@gmail.com</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -135,22 +135,22 @@
                                 <div class="nav-logo">
                                     <a href='#'><img src="assets/logo/logo.png" alt="Logo"></a>
                                 </div>
-                                <div class="tgmobile__search">
+                                <!-- <div class="tgmobile__search">
                                     <form action="#">
                                         <input type="text" placeholder="Search here...">
                                         <button><i class="fas fa-search"></i></button>
                                     </form>
-                                </div>
+                                </div> -->
                                 <div class="tgmobile__menu-outer">
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                                 </div>
                                 <div class="tgmobile__menu-bottom">
-                                    <div class="contact-info">
+                                    <!-- <div class="contact-info">
                                         <ul class="list-wrap">
                                             <li><a href="mailto:dashwant.singh@gmail.com">info-india@intage.com</a></li>
                                             <li><a href="tel:01141810000">+91-9560-452708</a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                     <div class="social-links">
                                         <ul class="list-wrap">
                                             <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
