--- a/about.html
+++ b/about.html
@@ -158,12 +158,12 @@
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                                 </div>
                                 <div class="tgmobile__menu-bottom">
-                                    <div class="contact-info">
+                                    <!-- <div class="contact-info">
                                         <ul class="list-wrap">
                                             <li><a href="mailto:dashwant.singh@gmail.com">dashwant.singh@gmail.com</a></li>
                                             <li><a href="tel:9560452708">+91-9560-452708</a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                     <div class="social-links">
                                         <ul class="list-wrap">
                                             <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
